# seaview

./: .gitignore  Cargo.toml  README.md  immediate.md  roadmap.md
.beads/: issues.jsonl
assets/test_sequences/cube_rotation/: cube_frame_0002.stl  cube_frame_0003.stl  cube_frame_0004.stl  cube_frame_0005.stl  cube_frame_0007.stl  cube_frame_0010.stl  cube_frame_0011.stl  cube_frame_0012.stl  cube_frame_0014.stl  cube_frame_0015.stl  cube_frame_0018.stl  cube_frame_0020.stl  cube_frame_0021.stl  cube_frame_0022.stl  cube_frame_0024.stl  cube_frame_0028.stl  cube_frame_0029.stl  cube_frame_0035.stl  cube_frame_0037.stl  cube_frame_0038.stl  cube_frame_0040.stl  cube_frame_0043.stl  cube_frame_0044.stl  cube_frame_0045.stl  cube_frame_0047.stl  cube_frame_0053.stl  cube_frame_0054.stl  cube_frame_0055.stl  cube_frame_0056.stl  cube_frame_0057.stl  cube_frame_0058.stl
crates/seaview/: Cargo.toml  README_NETWORK.md
crates/seaview-network/: Cargo.toml  build.rs
crates/seaview-network/examples/: Makefile  send_mesh  send_mesh.cpp  simple_test.rs  test_cpp_integration.sh
crates/seaview-network/include/: seaview_network.h
crates/seaview-network/src/: ffi.rs  lib.rs  protocol.rs  receiver.rs  sender.rs  types.rs
crates/seaview-network/tests/: integration_tests.rs
crates/seaview/src/: coordinates.rs  lib.rs  main.rs  mesh_optimization.rs
crates/seaview/src/app/cli/: mod.rs
crates/seaview/src/app/systems/: camera.rs  mod.rs
crates/seaview/src/app/systems/gltf_loader/: mod.rs
crates/seaview/src/app/systems/network/: mod.rs
crates/seaview/src/app/systems/parallel_loader/: mod.rs
crates/seaview/src/app/systems/stl_loader/: mod.rs
crates/seaview/src/app/ui/: state.rs
crates/seaview/src/app/ui/systems/: event_handlers.rs  material_system.rs  menu_bar.rs  mod.rs  playback_controls.rs  session_panel.rs
crates/seaview/src/cli/: mod.rs
crates/seaview/src/lib/: coordinates.rs  mesh_info.rs  settings.rs
crates/seaview/src/lib/asset_loaders/: mod.rs  stl_loader.rs
crates/seaview/src/lib/gltf_loader/: mod.rs
crates/seaview/src/lib/lighting/: mod.rs  placement.rs  systems.rs
crates/seaview/src/lib/network/: mod.rs  protocol.rs  receiver.rs
crates/seaview/src/lib/parallel_loader/: mod.rs
crates/seaview/src/lib/sequence/: async_cache.rs  discovery.rs  loader.rs  mod.rs  playback.rs
crates/seaview/src/lib/session/: mod.rs  types.rs
crates/seaview/src/materials/: mod.rs
crates/seaview/src/network/: mod.rs  protocol.rs  receiver.rs
crates/seaview/src/sequence/: async_cache.rs  discovery.rs  loader.rs  mod.rs  playback.rs
crates/seaview/src/session/: manager.rs  mod.rs
crates/seaview/src/systems/: camera.rs  diagnostics.rs  mod.rs
crates/seaview/src/systems/gltf_loader/: mod.rs
crates/seaview/src/systems/network/: mod.rs
crates/seaview/src/systems/parallel_loader/: mod.rs
crates/seaview/src/systems/stl_loader/: mod.rs
crates/seaview/src/ui/: mod.rs  state.rs
crates/seaview/src/ui/systems/: event_handlers.rs  menu_bar.rs  mod.rs  playback_controls.rs  session_panel.rs  test_panel.rs
crates/seaview/src/ui/widgets/: mod.rs
crates/shoreview/: Cargo.toml
crates/shoreview/src/: main.rs
crates/shoreview/src/cli/: mod.rs
crates/shoreview/src/sequence/: discovery.rs  loader.rs  mod.rs  playback.rs
crates/shoreview/src/systems/: camera.rs  mod.rs
crates/shoreview/src/systems/stl_loader/: mod.rs
crates/shoreview/src/ui/: mod.rs
docs/: BRP_EXTRAS.md  KNOWN_ISSUES.md  REMOVAL_PLAN.md  architecture.md  async_loader_integration.md  brp_mcp_integration.md  mesh-conversion-tools.md  mesh-format-summary.md  mesh_cache_migration_summary.md  ssr_implementation.md
docs/performance/: profiling_guide.md  tracing_setup.md
docs/research/: async_implementation_summary.md  baby_shark_mesh_conversion.md  bevy_asset_loading.md  bevy_asset_loading_summary.md  index.md  mesh-loading.md  parallel_stl_loading.md  settings_save_system.md
docs/roadmaps/: 01_network_sequencing.md  05_crate-reorg.md  center-camera-feature.md
examples/: async_loading_demo.rs  debug_mesh_rendering.rs  mesh_asset_test.rs  mesh_handle_test.rs  render_asset_usage_test.rs
research/: cameras.md  index.md  mesh-loading.md  mesh_formats_comparison.md  reimplimentation.md
roadmaps/: 01_network_sequencing.md  04_config.md
scripts/: cargo_install.sh  cargo_uninstall.sh  test_network_send_and_receive.sh  test_network_send_and_visualize.sh
src/: ui.rs
test_models/: cube.stl  pyramid.stl
test_sequences/cube_rotation/: cube_frame_0001.stl  cube_frame_0006.stl  cube_frame_0008.stl  cube_frame_0009.stl  cube_frame_0013.stl  cube_frame_0016.stl  cube_frame_0017.stl  cube_frame_0019.stl  cube_frame_0023.stl  cube_frame_0025.stl  cube_frame_0026.stl  cube_frame_0027.stl  cube_frame_0030.stl  cube_frame_0031.stl  cube_frame_0032.stl  cube_frame_0033.stl  cube_frame_0034.stl  cube_frame_0036.stl  cube_frame_0039.stl  cube_frame_0041.stl  cube_frame_0042.stl  cube_frame_0046.stl  cube_frame_0048.stl  cube_frame_0049.stl  cube_frame_0050.stl  cube_frame_0051.stl  cube_frame_0052.stl  cube_frame_0059.stl
test_sequences/particles/: particles_t000.stl  particles_t001.stl  particles_t002.stl  particles_t003.stl  particles_t004.stl  particles_t005.stl  particles_t006.stl  particles_t007.stl  particles_t008.stl  particles_t009.stl  particles_t010.stl  particles_t011.stl  particles_t012.stl  particles_t013.stl  particles_t014.stl  particles_t015.stl  particles_t016.stl  particles_t017.stl  particles_t018.stl  particles_t019.stl  particles_t020.stl  particles_t021.stl  particles_t022.stl  particles_t023.stl  particles_t024.stl  particles_t025.stl  particles_t026.stl  particles_t027.stl  particles_t028.stl  particles_t029.stl
