[workspace]
members = ["crates/seaview"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Seaview Contributors"]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "png",
    "bevy_remote",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
