[workspace]
members = ["crates/seaview"]
exclude = [
    "vendor/baby_shark",
    "vendor/bevy",
    "vendor/bevy_brp",
    "vendor/mesh-ripper",
    "vendor/stl_io",
    "vendor/bevy_egui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Seaview Contributors"]

[workspace.dependencies]
bevy = { path = "vendor/bevy", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "png",
    "bevy_remote",
    "bevy_mesh",
    "bevy_image",
    "bevy_color",
    "bevy_shader",
    "bevy_camera",
    "bevy_light",
    "bevy_post_process",
    "bevy_log",
    "zstd_rust",
] }
bevy_egui = { path = "vendor/bevy_egui" }
# baby_shark = { git = "https://github.com/fluid-notion-systems/baby_shark.git", branch = "main" }
baby_shark = { path = "vendor/baby_shark", features = ["bevy"] }

[patch.crates-io]
bevy = { path = "vendor/bevy" }
bevy_a11y = { path = "vendor/bevy/crates/bevy_a11y" }
bevy_app = { path = "vendor/bevy/crates/bevy_app" }
bevy_asset = { path = "vendor/bevy/crates/bevy_asset" }
bevy_camera = { path = "vendor/bevy/crates/bevy_camera" }
bevy_color = { path = "vendor/bevy/crates/bevy_color" }
bevy_core_pipeline = { path = "vendor/bevy/crates/bevy_core_pipeline" }
bevy_derive = { path = "vendor/bevy/crates/bevy_derive" }
bevy_diagnostic = { path = "vendor/bevy/crates/bevy_diagnostic" }
bevy_ecs = { path = "vendor/bevy/crates/bevy_ecs" }
bevy_gizmos = { path = "vendor/bevy/crates/bevy_gizmos" }
bevy_gltf = { path = "vendor/bevy/crates/bevy_gltf" }
bevy_image = { path = "vendor/bevy/crates/bevy_image" }
bevy_input = { path = "vendor/bevy/crates/bevy_input" }
bevy_input_focus = { path = "vendor/bevy/crates/bevy_input_focus" }
bevy_light = { path = "vendor/bevy/crates/bevy_light" }
bevy_log = { path = "vendor/bevy/crates/bevy_log" }
bevy_math = { path = "vendor/bevy/crates/bevy_math" }
bevy_mesh = { path = "vendor/bevy/crates/bevy_mesh" }
bevy_pbr = { path = "vendor/bevy/crates/bevy_pbr" }
bevy_picking = { path = "vendor/bevy/crates/bevy_picking" }
bevy_platform = { path = "vendor/bevy/crates/bevy_platform" }
bevy_post_process = { path = "vendor/bevy/crates/bevy_post_process" }
bevy_ptr = { path = "vendor/bevy/crates/bevy_ptr" }
bevy_reflect = { path = "vendor/bevy/crates/bevy_reflect" }
bevy_remote = { path = "vendor/bevy/crates/bevy_remote" }
bevy_render = { path = "vendor/bevy/crates/bevy_render" }
bevy_scene = { path = "vendor/bevy/crates/bevy_scene" }
bevy_shader = { path = "vendor/bevy/crates/bevy_shader" }
bevy_sprite = { path = "vendor/bevy/crates/bevy_sprite" }
bevy_text = { path = "vendor/bevy/crates/bevy_text" }
bevy_time = { path = "vendor/bevy/crates/bevy_time" }
bevy_transform = { path = "vendor/bevy/crates/bevy_transform" }
bevy_ui = { path = "vendor/bevy/crates/bevy_ui" }
bevy_ui_render = { path = "vendor/bevy/crates/bevy_ui_render" }
bevy_utils = { path = "vendor/bevy/crates/bevy_utils" }
bevy_window = { path = "vendor/bevy/crates/bevy_window" }
bevy_winit = { path = "vendor/bevy/crates/bevy_winit" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
