[package]
name = "seaview-network"
version = "0.1.0"
edition = "2021"
authors = ["Seaview Contributors"]
description = "Network library for real-time mesh streaming between simulation and visualization"
license = "MIT OR Apache-2.0"

[lib]
name = "seaview_network"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
byteorder = "1.5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.8"
tracing-subscriber = "0.3"

[build-dependencies]
cbindgen = "0.26"

[features]
default = []
ffi = []
json = ["serde_json"]

[dependencies.serde_json]
version = "1.0"
optional = true
