[package]
name = "seaview"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "seaview"
path = "src/lib.rs"

[[bin]]
name = "seaview"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
baby_shark = { workspace = true }
nalgebra = "0.33.2"
stl_io = "0.7"
clap = { version = "4.5", features = ["derive"] }
bevy_brp_extras = { git = "https://github.com/natepiano/bevy_brp.git", rev = "6edff47" }
regex = "1.10"
rayon = "1.10"
byteorder = "1.4"
bevy_egui = "0.35.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
log = "0.4"                                                                              # Still needed for binary tools
env_logger = "0.10"                                                                      # Still needed for binary tools
crossbeam-channel = "0.5"
meshopt = "0.3"
thiserror = "1.0"
glob = "0.3"
gltf = { version = "1.4", features = ["import"] }
threadpool = "1.8"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "async_loading_demo"
path = "../../examples/async_loading_demo.rs"

[[example]]
name = "debug_mesh_rendering"
path = "../../examples/debug_mesh_rendering.rs"

[[example]]
name = "mesh_asset_test"
path = "../../examples/mesh_asset_test.rs"

[[example]]
name = "mesh_handle_test"
path = "../../examples/mesh_handle_test.rs"

[[example]]
name = "render_asset_usage_test"
path = "../../examples/render_asset_usage_test.rs"

[[bin]]
name = "optimize_stl_sequence"
path = "src/bin/optimize_stl_sequence.rs"

[[bin]]
name = "stl_to_gltf"
path = "src/bin/stl_to_gltf_simple.rs"

[[bin]]
name = "mesh_receiver_service"
path = "src/bin/mesh_receiver_service.rs"

[[bin]]
name = "mesh_sender_test"
path = "src/bin/mesh_sender_test.rs"
