[package]
name = "shoreview"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
stl_io = "0.7"
clap = { version = "4.5", features = ["derive"] }
bevy_brp_extras = { git = "https://github.com/natepiano/bevy_brp.git", rev = "6edff47" }
regex = "1.10"
rayon = "1.10"
